# osgrep-max

./: .gitignore  .npmignore  AGENTS.md  CLAUDE.md  LICENSE  NOTICE  README.md  SKILL.md  TODO.md  benchmark.js  benchmark.js.map  biome.json  claudes-gaps.md  debug-db.ts  justfile  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  repro-crash.js  repro-crash.js.map  run-benchmark.sh  test_metastore.ts  tsconfig.json  vitest.config.js
.claude-plugin/: marketplace.json
.husky/: pre-commit
benchmark/: benchmark_opencode.csv  deterministic-eval.ts  plot.ts
docs/: known-limitations.md
experiments/: mrr-sweep.ts  quick_check.ts  ranking-test.ts  verify-fix.ts
guides/: README.md
mlx-embed-server/: .npmignore  pyproject.toml  server.py  summarizer.py
scripts/: compare-engines.ts  index-bench.sh  postinstall.js  sync-eval-cases.ts  sync-versions.sh  test-graph.ts  test-structural-boosting.ts  verify_skeleton.ts
src/: benchmark-agent.ts  benchmark.ts  config.ts  eval.ts  generate-benchmark-chart.ts  index.ts  login.ts  search.ts  token.ts  types.ts  utils.ts  watch.ts
tests/: cache-check.test.ts  chunking.languages.test.ts  chunking.large_json.test.ts  chunking.test.ts  config-command.test.ts  daemon-client.test.ts  diff-command.test.ts  file-system.test.ts  file-utils.test.ts  filter-builder.test.ts  graph-builder.test.ts  impact-lib.test.ts  index-command.test.ts  initial-sync.test.ts  intent.test.ts  languages.test.ts  local-store-search.test.ts  log-command.test.ts  mcp-helpers.test.ts  project-registry.test.ts  refactor-safety.test.ts  (+11 more)
(+192 files in other folders)
